--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -16,6 +16,176 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="60" data-price="59.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Vjlm09"><img src="https://m.media-amazon.com/images/I/515-WF0BcmL._SR400,400_.jpg" alt="Bluetooth Wireless Earbuds" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2Vjlm09">LOBKIN Bluetooth Wireless Earbuds, Latest Bluetooth TWS 5.0 Deep Bass Dual-Microphone True Wireless Sports Earbuds</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $59.98</strong> using code:60RALM96</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Vjlm09">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="18.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VnpfBe"><img src="https://m.media-amazon.com/images/I/71tAcKfv63L._SR400,400_.jpg" alt="Joy-Con Charging Station" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2VnpfBe">Joy-Con Charging Station,4 in 1 Charging Dock Stand for Nintendo Switch and Two USB Ports</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>45% off at $18.99</strong> using code:45D132FC</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VnpfBe">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="69.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Vwlae9"><img src="https://m.media-amazon.com/images/I/61vYIAoK1yL._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2Vwlae9">True Wireless Earbuds Bluetooth 5.0 TWS in-Ear Headphones, Padmate Pamu Scroll IPX5, Snug Fit Sport Headsets</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $69.99</strong> using code:608QBBJV</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Vwlae9">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="40.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2W0Y3W0"><img src="https://m.media-amazon.com/images/I/61O6zoRV2FL._SR400,400_.jpg" alt="Laptop Backpack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2W0Y3W0">Laptop Backpack, Large Capacity Travel Waterproof Computer Bag for Women Men</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $40.99</strong> using code:60HNUOGQ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2W0Y3W0">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="23.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Puwd1H"><img src="https://m.media-amazon.com/images/I/41OBgBCgDVL._SR400,400_.jpg" alt="Headphone Charge Adapter" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2Puwd1H">USB C to 3.5mm Headphone Charge Adapter Compatible for Pixel 2/2XL/3/3XL, iPad Pro 2018, HTC...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $23.99</strong> using code:50Z352BN</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Puwd1H">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="64.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IPOllw"><img src="https://m.media-amazon.com/images/I/61Dhg6WhKrL._SR400,400_.jpg" alt="Wireless Charging" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2IPOllw">nstaBox W33 Wireless Charging Alarm Clock Radio, Work with Bluetooth, Dual Speakers...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $64.99</strong> using code:20ZZKSUQ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IPOllw">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="36.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GJ28Jj"><img src="https://m.media-amazon.com/images/I/616c1+HhcTL._SR400,400_.jpg" alt="Wireless Speaker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GJ28Jj">InstaBox Firestarter FS18 LED Flame Speaker, Torch Light Outdoor/Indoor Portable Stereo Wireless Speaker</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $36.99</strong> using code:15FPDQZO</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GJ28Jj">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2W6V9yL"><img src="https://m.media-amazon.com/images/I/51dDhhq6BaL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2W6V9yL">SD Card Camera Reader Adapter Trail Game Camera Viewer Compatible for iPhone Xs/Xs Max/8 Plus/8/7 Plus/7/6s...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $9.49</strong> using code:501MQ2VU</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2W6V9yL">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="59.87">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2UEdm5s"><img src="https://m.media-amazon.com/images/I/81h-OR++WTL._SR400,400_.jpg" alt="Retro Bluetooth Speakers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2UEdm5s">Bongo Bamboo Retro Bluetooth Speakers - Portable Wireless Handcrafted Wood Speaker</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $59.87</strong> using code:20OFFBONGO</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2UEdm5s">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="16.88">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GDxJvM"><img src="https://m.media-amazon.com/images/I/71Nt-eWLAVL._SR400,400_.jpg" alt="Bluetooth Speakers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GDxJvM">UDISON Portable Small Bluetooth Speakers with Enhanced Bass, Dual Stereo Pairing, LED Lights, Built-in Mic...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $16.88</strong> using code:5043ATZR</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GDxJvM">Copy & Use code</a>
+  </div>
+</div>
+
  <div class="card clearfix" data-score="30" data-price="49.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2UwlG7f"><img src="https://m.media-amazon.com/images/I/61-L21xESmL._SR400,400_.jpg" alt="Bluetooth Headphones" /></a>
