--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -37,24 +37,24 @@
     </div>
 </div>
  -->
-
-<div class="card clearfix" data-tags="Coupons"><!--(Coupons or Deals)-->
-    
-    <div class="info_box">
-      <a target="_blank" href="https://amzn.to/2GDUFvg">
-        <p>70%<br /><em>OFF</em></p>
-        <strong>Coupon</strong><!--(Coupons or Deals)-->
-      </a>
-    </div>
-    <div class="inner">
-      <p><a target="_blank" href="https://amzn.to/2GDUFvg">Amazon | Sales & Coupons, April 2019</a></p>
-      <em>These Amazon coupons of the day to save as much as 70% on Grocery, Health & Beauty, Electronics, Home Improvement, and more. Simply click on the category of coupons you want, and clipping coupons.</em>
-      <span>Expiration: on going</span>
-    </div> 
-    <div class="deal_btn">
-      <a target="_blank" href="https://amzn.to/2GDUFvg">Shop Now</a>
-    </div>
- </div>
+<div class="coupons_highlight">
+  <div class="card clearfix" data-tags="Coupons"><!--(Coupons or Deals)-->
+      <div class="info_box">
+        <a target="_blank" href="https://amzn.to/2GDUFvg">
+          <p>70%<br /><em>OFF</em></p>
+          <strong>Coupon</strong><!--(Coupons or Deals)-->
+        </a>
+      </div>
+      <div class="inner">
+        <p><a target="_blank" href="https://amzn.to/2GDUFvg">Amazon | Sales & Coupons, April 2019</a></p>
+        <em>These Amazon coupons of the day to save as much as 70% on Grocery, Health & Beauty, Electronics, Home Improvement, and more. Simply click on the category of coupons you want, and clipping coupons.</em>
+        <span>Expiration: on going</span>
+      </div> 
+      <div class="deal_btn">
+        <a target="_blank" href="https://amzn.to/2GDUFvg">Shop Now</a>
+      </div>
+   </div>
+</div>
 
  <div class="card clearfix" data-tags="Sale">
     <div class="info_box">
