--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -105,6 +105,8 @@
   .coupons .rt_cnt .cnt_box button:hover{border-bottom:1px solid;color:#000;}
   
   .coupons .coupons_wrap{margin:20px 0 0 0;}
+  .coupons .coupons_wrap .coupons_highlight{border:3px solid;margin-bottom:15px;}
+  .coupons .coupons_wrap .coupons_highlight .card{border-bottom:none;margin:0;}
   .coupons .coupons_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;}
   .coupons .coupons_wrap .card .info_box{font-family: 'Montserrat', sans-serif;float:left;width:18%;height:100px;padding:1.5% 0;margin:0 1%;text-align:center;background:#fff;color:#000;}
   .coupons .coupons_wrap .card .info_box a{text-decoration:none;color:#000;}
