--- a/app/views/shared/_promocodes_days.html.erb
+++ b/app/views/shared/_promocodes_days.html.erb
@@ -1,5 +1,7 @@
-<li><a href="/promocodes_days/day_05">Apr. 23. 2019</a></li>
-<li><a href="/promocodes_days/day_04">Apr. 22. 2019</a></li>
-<li><a href="/promocodes_days/day_03">Apr. 21. 2019</a></li>
-<li><a href="/promocodes_days/day_02">Apr. 20. 2019</a></li>
-<li><a href="/promocodes_days/day_01">Apr. 19. 2019</a></li>
+<!-- <li><a href="/promocodes_days/day_07">Apr. 26. 2019</a></li> -->
+<li><a href="/promocodes_days/day_06">Apr. 25. 2019</a></li>
+<li><a href="/promocodes_days/day_05">Apr. 24. 2019</a></li>
+<li><a href="/promocodes_days/day_04">Apr. 23. 2019</a></li>
+<li><a href="/promocodes_days/day_03">Apr. 22. 2019</a></li>
+<li><a href="/promocodes_days/day_02">Apr. 21. 2019</a></li>
+<li><a href="/promocodes_days/day_01">Apr. 20. 2019</a></li>
