--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -58,6 +58,40 @@
 
  <div class="card clearfix" data-tags="Sale">
     <div class="info_box">
+      <a target="_blank" href="https://amzn.to/2XH2c1C">
+        <p><span>50%</span><br /><em>OFF</em></p>
+        <strong>Sale</strong>
+      </a>
+    </div>
+    <div class="inner">
+      <p><a target="_blank" href="https://amzn.to/2XH2c1C">Up to 50% off | Great deals on like-new products on Amazon Renewed</a></p>
+      <em>Products on Amazon Renewed have been inspected and tested by qualified suppliers to work and look like new, and come with a minimum 90-day supplier-backed warranty. Get great deals on smartphones, computers, laptops, tablets, home and kitchen appliances, game consoles, office products, and more.</em>
+      <span>Expiration: On going</span>
+    </div> 
+    <div class="deal_btn">
+      <a target="_blank" href="https://amzn.to/2XH2c1C">Shop Now</a>
+    </div>
+</div>
+
+<div class="card clearfix" data-tags="Sale">
+    <div class="info_box">
+      <a target="_blank" href="https://amzn.to/2DyoCdS">
+        <p><span>15%</span><br /><em>OFF</em></p>
+        <strong>Sale</strong>
+      </a>
+    </div>
+    <div class="inner">
+      <p><a target="_blank" href="https://amzn.to/2DyoCdS">Up to 15% & FREE Shipping | Subscribe & Save</a></p>
+      <em>Save up to 15% and receive FREE shipping on thousands of products. Easily manage your subscriptions; no commitments, obligations, or fees and you can cancel at any time.</em>
+      <span>Expiration: On going</span>
+    </div> 
+    <div class="deal_btn">
+      <a target="_blank" href="https://amzn.to/2DyoCdS">Shop Now</a>
+    </div>
+</div>
+
+ <div class="card clearfix" data-tags="Sale">
+    <div class="info_box">
       <a target="_blank" href="https://amzn.to/2GxfR4C">
         <p><span>20%</span><br /><em>OFF</em></p>
         <strong>Sale</strong>
