--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -16,6 +16,382 @@
 </div>
  -->
 
+ <div class="card clearfix" data-score="40" data-price="25.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XMoCic"><img src="https://m.media-amazon.com/images/I/615DNkbq6JL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XMoCic">SINOBI Casual Men Stainless Steel Wrist Watch 3ATM Waterproof Luminous Calendar Auto Date Sport Men Watch</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $25.99</strong> using code:promo_code</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XMoCic">Copy & Use code</a>
+  </div>
+</div>
+
+ <div class="card clearfix" data-score="20" data-price="65.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GJMaOP"><img src="https://m.media-amazon.com/images/I/71zfrsSVESL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GJMaOP">BUREI Women Analog Quartz Dress Watch Date Display with Crystal Markers Bezel and Ceramic Bracelet</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $65.99</strong> using code:20XAFEQJ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GJMaOP">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="32.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IY5CJl"><img src="https://m.media-amazon.com/images/I/71-9Fvsj24L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2IY5CJl">JEDIR Men's Chronograph Watch Multifunction Military Quartz Watch Classic Simple Design...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $32.99</strong> using code:4016VE63</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IY5CJl">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="19.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IXWeFy"><img src="https://m.media-amazon.com/images/I/614bknkliwL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2IXWeFy">First Alert Carbon Monoxide Detector Alarm | Plug-In with Battery Backup</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $19.59</strong> using code:15FIRSTALERT</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IXWeFy">Copy & Use code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="40" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Vt5wA0"><img src="https://m.media-amazon.com/images/I/61VaBEGHn5L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2Vt5wA0">Home Security Door Lock, Childproof Door Reinforcement Lock with 3" Stop Withstand 800 lbs for...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $29.99</strong> using code:40HL4ABR</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Vt5wA0">Copy & Use code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="55" data-price="35.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XMfCt7"><img src="https://m.media-amazon.com/images/I/51RHCb2h9dL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XMfCt7">Smart Plug, Mini Wi-Fi Socket Outlet Compatible with Alexa Echo Compatible with Google Home Assistant IFTTT...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>55% off at $35.99</strong> using code:55BTJA7C</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XMfCt7">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IYW1BZ"><img src="https://m.media-amazon.com/images/I/61Sj04L7mUL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2IYW1BZ">holahome Wireless Doorbell Door Bell Push Button and Battery Operated Receiver Portable Waterproof Remote Control Home Security</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $14.99</strong> using code:50HTYBY3</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IYW1BZ">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="22.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2UHwO19"><img src="https://m.media-amazon.com/images/I/61vHu1RYbkL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2UHwO19">VIGRUE M2 M3 M4 Alloy Steel Socket Head Cap Screws Nuts Set 1080pcs Assortment Kit</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>45% off at $22.99</strong> using code:45KXL2HV</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2UHwO19">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Vrjt1n"><img src="https://m.media-amazon.com/images/I/41nCx7Cj5uL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2Vrjt1n">Elzele LED Desk Lamp, Eye-Caring Table Lamps, Dimmable Office Lamp with 15000mAh 5V/2A USB Charging Port Power Bnak</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $39.99</strong> using code:504PTJ7L</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Vrjt1n">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IXPfw9"><img src="https://m.media-amazon.com/images/I/61Y72hmxTJL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2IXPfw9">SkyGenius Rainfall Fixed Shower Head, Chrome-Finish Wall Mount High Pressure Shower Head</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $14.99</strong> using code:0OP6R6K</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IXPfw9">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="36.36">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GJsevJ"><img src="https://m.media-amazon.com/images/I/51BGjuyxu5L._SR400,400_.jpg" alt="Hanging Lights" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GJsevJ">LNC A0190701 Hanging Lights 10 Inch Iron Indoor Pendant Paint Baking Finish, Adjustable Length, UL Certification</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $36.36</strong> using code:60V4HJAR</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GJsevJ">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="249.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XLxSTC"><img src="https://m.media-amazon.com/images/I/61gjtXo3voL._SR400,400_.jpg" alt="Chandeliers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XLxSTC">LNC A02992 Pendant 6-Light Chandeliers with E26 Ceramic Bulb Base, Adjustable Length, UL Certification...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>45% off at $249.99</strong> using code:45VXQ1XO</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XLxSTC">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="109.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XRgXiF"><img src="https://m.media-amazon.com/images/I/61KhTqM22nL._SR400,400_.jpg" alt="Kitchen Sink Faucets" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XRgXiF">HOMELODY Kitchen Sink Faucets with 3 Functions Pull Down Sprayer...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $109.99</strong> using code:50US1RNW</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XRgXiF">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J41R5f"><img src="https://m.media-amazon.com/images/I/51zQOXquHML._SR400,400_.jpg" alt="Ceiling Lamp Shade" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2J41R5f">Ceiling Lamp Shade - Retro Industrial Pendant Light Vintage Metal Lamp Fixture</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $49.99</strong> using code:50SDLAD6</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2J41R5f">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2W7EfjD"><img src="https://m.media-amazon.com/images/I/51G+gAP7uAL._SR400,400_.jpg" alt="World Travel Adapter" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2W7EfjD">World Travel Adapter Kit - NTONPOWER International Power Adapter, 2 USB Ports 2 Outlets, 2000W Universal Cruise Power Strip</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $24.99</strong> using code:40OG9EPL</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2W7EfjD">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wawr0z"><img src="https://m.media-amazon.com/images/I/71ScPwllWeL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2Wawr0z">CLY 20W LED Motion Sensor Floodlight Outdoor Security Flood Lights 1800 Lumens...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>70% off at $29.99</strong> using code:704SMXIT</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wawr0z">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Pw3sld"><img src="https://m.media-amazon.com/images/I/519A3DuvKjL._SR400,400_.jpg" alt="Wireless Doorbell Door Bell" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2Pw3sld">Wireless Doorbell Door Bell Chime - Push Button & Receiver Portable Waterproof Remote Control Home Security Chime Kit</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>45% off at $19.99</strong> using code:40Q4RYJ7</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Pw3sld">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="34.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XIydX6"><img src="https://m.media-amazon.com/images/I/61GE4DYXbML._SR400,400_.jpg" alt="Dimmable LED Downlight" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XIydX6">SGL 6 Inch Dimmable LED Downlight, 13W (100W Replacement), 3000K Soft White...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $34.99</strong> using code:50OIGPVF</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XIydX6">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="50.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DBLuct"><img src="https://images-na.ssl-images-amazon.com/images/I/51-3PhS3JYL._SX679_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>65% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2DBLuct">ominilight Metal Wood Lamp Sets</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>65% off at $50.99</strong> using code:65PBFG39</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DBLuct">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="55.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XJBmpB"><img src="https://m.media-amazon.com/images/I/415CRf4RqnL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XJBmpB">Classic LED Floor Lamp with Long Arm, Swing Arm Tall Standing Lamp, Adjustable Eye Caring Reading Lamp...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $55.99</strong> using code:60U3U48O</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XJBmpB">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VufOzO"><img src="https://m.media-amazon.com/images/I/71Qcmwn3xVL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2VufOzO">Battery Operated Pencil Sharpener, Small Electric Heavy Duty Classroom Sharpener, Steel Blade, Adjustable Pencil Nib</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $16.99</strong> using code:50QRMJJN</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VufOzO">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J0mm2v"><img src="https://m.media-amazon.com/images/I/71zN0fUZAML._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2J0mm2v">YJY Car Diffuser for Essential Oils Portable Home Humidifier, Ultrasonic None-Sponge-Wick USB Aromatherapy Intermittent Mode</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>25% off at $19.99</strong> using code:25PYE474</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2J0mm2v">Copy & Use code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="30" data-price="25.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2GIvk2Y"><img src="https://m.media-amazon.com/images/I/61S2Dw03H7L._SR400,400_.jpg" alt="Kids Bluetooth Headphones" /></a>
