--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -52,7 +52,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Promo Codes on Amazon 2019</h2>
+          <h2>Promo Codes on Amazon Apr. 04. 2019</h2>
           
           <div class="sort_box clearfix">
             <ul>
